# Robotics

./: .gitignore  CMakeLists.txt  Makefile  MotorDriver.pm  MotorShield.pm  README.md  RPiCamera.cpp  WebCam.cpp  camera.h  gpio.cc  gpio.h  move.pl  p.sh  sketch.pm  test.pl  web-controls.pl
ManualMouse/app/: build.gradle
ManualMouse/app/src/androidTest/java/org/fog/manualmouse/: ExampleInstrumentedTest.java
ManualMouse/app/src/main/: AndroidManifest.xml
ManualMouse/app/src/main/java/org/fog/manualmouse/: CirclePad.java  CirclePadFragment.java  ConfigureFragment.java  MainActivity.java  MouseComs.java
ManualMouse/app/src/main/res/layout/: activity_main.xml  circle_layout.xml  configure_layout.xml
ManualMouse/app/src/main/res/menu/: menu.xml
ManualMouse/app/src/main/res/values/: strings.xml
ManualMouse/app/src/test/java/org/fog/manualmouse/: ExampleUnitTest.java
MicroMouse/Android-OpenCV/: local.properties
MicroMouse/Android-OpenCV/app/src/androidTest/java/org/fog/micromouse/: ExampleInstrumentedTest.java
MicroMouse/Android-OpenCV/app/src/main/: AndroidManifest.xml
MicroMouse/Android-OpenCV/app/src/main/java/org/fog/micromouse/body/: Action.java  Brain.java
MicroMouse/Android-OpenCV/app/src/main/java/org/fog/micromouse/maze/: Direction.java
MicroMouse/Android-OpenCV/app/src/main/java/org/fog/micromouse/vision/: CalibrateColor.java  Wall.java
MicroMouse/Android-OpenCV/app/src/main/res/layout/: camera_layout.xml
MicroMouse/Android-OpenCV/app/src/main/res/menu/: menu.xml
MicroMouse/Android-OpenCV/app/src/main/res/values/: strings.xml
MicroMouse/Android-OpenCV/openCVLibrary310/: build.gradle
MicroMouse/Arduino/: Arduino.ino
MicroMouse/Arduino-IR/: .gitignore  CMakeLists.txt  Makefile  README.md  build_coverage  drive  libsolv.c  maze.launch  maze.world  simulate
MicroMouse/Arduino-IR/cmake/: config.h.in
MicroMouse/Arduino-IR/lib/: Maze.pm  Mouse.pm  SDL2.pm
MicroMouse/Arduino-IR/lib/Maze/: SDF.pm  SDL.pm  Text.pm
MicroMouse/Arduino-IR/lib/SDL2/: Image.pm  TTF.pm
MicroMouse/Arduino-IR/models/bot/: model.config  model.sdf
MicroMouse/Arduino-IR/models/easy/: model.config  model.sdf
MicroMouse/Arduino-IR/models/need_second_search/: model.sdf
MicroMouse/Arduino-IR/sketch/: sketch.ino
MicroMouse/Arduino-IR/src/: CMakeLists.txt  Mouse.cpp  Mouse.h  a_star.c  a_star.cpp  a_star.h  discover.cpp  hardware.cpp  hardware.h  maze.h  mocks.cpp  mocks.h  mouse.c  mouse.cpp  mouse.h  movement.cpp  movement.h  plugin.cc  queue.cpp  queue.h  state.cpp  state.h  wheel.cpp  wheel.h
MicroMouse/Arduino-IR/tests/: CMakeLists.txt  check_astar.c  check_astar.cpp  check_explore.cpp  check_localization.cpp  check_maze.cpp  check_movement.cpp  check_queue.c  check_queue.cpp  check_race_to_center.cpp  check_return_to_start.cpp  check_runs.cpp  check_validate_path.cpp  main.c  main.cpp  maze.cpp  maze.h  mocks.cpp  mocks.h
MicroMouse/app/: build.gradle
MicroMouse/app/src/main/: AndroidManifest.xml
MicroMouse/app/src/main/java/org/fog/micromouse/: AutomaticActivity.java  AutomaticFragment.java  CalibrationActivity.java  CalibrationFragment.java  MMActivity.java  ManualActivity.java  MazeActivity.java
MicroMouse/app/src/main/java/org/fog/micromouse/body/: Wheels.java
MicroMouse/app/src/main/java/org/fog/micromouse/maze/: Maze.java  Room.java
MicroMouse/app/src/main/java/org/fog/micromouse/vision/: CalibrateColor.java  DetectWalls.java  Wall.java
MicroMouse/app/src/main/res/layout/: automatic_layout.xml  calibration_layout.xml  camera_layout.xml  manual_layout.xml
MicroMouse/app/src/main/res/menu/: menu.xml
MicroMouse/app/src/test/java/org/fog/micromouse/: ExampleUnitTest.java
PongBot/AndroidApp/app/: build.gradle  proguard-rules.pro
PongBot/AndroidApp/app/src/androidTest/java/org/fog/pingpong/: ApplicationTest.java
PongBot/AndroidApp/app/src/main/: AndroidManifest.xml
PongBot/AndroidApp/app/src/main/java/org/fog/pingpong/: VideoActivity.java
PongBot/AndroidApp/app/src/main/res/layout/: activity_video.xml
PongBot/AndroidApp/app/src/test/java/org/fog/pingpong/: ExampleUnitTest.java
PongBot/ArduinoController/paddle/: paddle.ino
TankBot/: .gitignore  bot.cpp  camera-init-test.pl  circle.py  gpio.cpp  init.sh  targets.cpp
TankBot/public/: battle.html  tankbot.css  tankbot.js  target.html  test.html
public/: battle.html  index.html  manual.html  tankbot.js  target.html
public/css/: swipe-page.css  swipe-page.css~
public/js/: swipe-page.js
